Convert Home and Help buttons, including large buttons. (#327)

--- a/gobotany/site/templates/gobotany/_getting_started_main_content.html
+++ b/gobotany/site/templates/gobotany/_getting_started_main_content.html
@@ -143,4 +143,4 @@
     </div>
 
     <a href="{% url 'level1' 'simple' %}"
-        class="onward-btn">Onward to the Simple Key</a>
+        class="onward-btn orange-button caps">Onward to the Simple Key</a>
