--- a/gobotany/site/templates/gobotany/advanced.html
+++ b/gobotany/site/templates/gobotany/advanced.html
@@ -31,7 +31,7 @@
                                 </ul>
                             </section>
                             <a href="{% url 'level1' 'full' %}"
-                                class="go-fullkey-btn">Go To Full Key</a>
+                                class="orange-button caps large">Go To Full Key</a>
                         </div>
                         <div class="dk-landing-section">
                             <h2>Dichotomous Key to All 3,500 New England
@@ -58,7 +58,7 @@
                                 2011).</p>
                             </section>
                             <a href="{% url 'dkey' %}"
-                                class="go-dichkey-btn">Go To Dichotomous Key</a>
+                                class="orange-button caps large">Go To Dichotomous Key</a>
                         </div>
                     </div>
 {% endblock %}
