--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -223,12 +223,13 @@ div.scrollableArea { position: relative; width: auto; height: 100%; }
 
 @font-face { font-family: ScalaSansSmallCaps; font-style: italic; font-weight: bold; src: url(http://newfs.s3.amazonaws.com/fonts/ScalaSansScWeb-BoldIta.woff) format("woff"); }
 
-.orange-button, body.taxa .visit-dkey a, body.plantshare .ps-button, body.plantshare .modal-container .image-modal a.button, body.plantshare#ask #main .submit, body.plantshare#plantshare #ask .submit, body.plantshare#profile div.section-container .image-modal a.button, body.plantshare.checklists .image-modal a.button, #dkey #main .offer-help-aside a.button, #dkey #main ul.couplets a.button, #dkey #main a.show-all-button { background-color: #dc9402; /* for IE without gradient support */ border: 1px solid #dc9402 !important; color: white; display: inline-block; font-family: ScalaSans, "Trebuchet MS", Helvetica, Arial, "Lucida Sans Unicode", sans-serif; font-size: 12px; letter-spacing: 1px; line-height: 18px; min-width: 85px; padding: 3.6px 12px; text-align: center; text-decoration: none; -webkit-border-radius: 12px; -moz-border-radius: 12px; -ms-border-radius: 12px; -o-border-radius: 12px; border-radius: 12px; -webkit-box-shadow: 0px 1px 4px #a2a64d; -moz-box-shadow: 0px 1px 4px #a2a64d; box-shadow: 0px 1px 4px #a2a64d; background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dc9402), color-stop(40%, #f0b448), color-stop(100%, #dc9402)); background: -webkit-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: -moz-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: -o-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); }
+.orange-button, body.taxa .visit-dkey a, body.plantshare .ps-button, body.plantshare .modal-container .image-modal a.button, body.plantshare#ask #main .submit, body.plantshare#plantshare #ask .submit, body.plantshare#profile div.section-container .image-modal a.button, body.plantshare.checklists .image-modal a.button, #dkey #main .offer-help-aside a.button, #dkey #main ul.couplets a.button, #dkey #main a.show-all-button { background-color: #dc9402; /* for IE without gradient support */ border: 1px solid #dc9402 !important; color: white; display: inline-block; font-family: ScalaSans, "Trebuchet MS", Helvetica, Arial, "Lucida Sans Unicode", sans-serif; font-size: 12px; letter-spacing: 1px; line-height: 18px; min-width: 80px; padding: 4px 12px; text-align: center; text-decoration: none; -webkit-border-radius: 14px; -moz-border-radius: 14px; -ms-border-radius: 14px; -o-border-radius: 14px; border-radius: 14px; -webkit-box-shadow: 0px 1px 4px #a2a64d; -moz-box-shadow: 0px 1px 4px #a2a64d; box-shadow: 0px 1px 4px #a2a64d; background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dc9402), color-stop(40%, #f0b448), color-stop(100%, #dc9402)); background: -webkit-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: -moz-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: -o-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); }
 .orange-button:hover, body.taxa .visit-dkey a:hover, body.plantshare .ps-button:hover, body.plantshare .modal-container .image-modal a.button:hover, body.plantshare#ask #main .submit:hover, body.plantshare#plantshare #ask .submit:hover, body.plantshare#profile div.section-container .image-modal a.button:hover, body.plantshare.checklists .image-modal a.button:hover, #dkey #main .offer-help-aside a.button:hover, #dkey #main ul.couplets a.button:hover, #dkey #main a.show-all-button:hover { background-color: #e29b0b; /* for IE without gradient support */ background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #e29b0b), color-stop(32%, #f6be59), color-stop(50%, #f6be59), color-stop(100%, #e39d0e)); background: -webkit-linear-gradient(top, #e29b0b 0%, #f6be59 32%, #f6be59 50%, #e39d0e 100%); background: -moz-linear-gradient(top, #e29b0b 0%, #f6be59 32%, #f6be59 50%, #e39d0e 100%); background: -o-linear-gradient(top, #e29b0b 0%, #f6be59 32%, #f6be59 50%, #e39d0e 100%); background: linear-gradient(top, #e29b0b 0%, #f6be59 32%, #f6be59 50%, #e39d0e 100%); }
 .orange-button:active, body.taxa .visit-dkey a:active, body.plantshare .ps-button:active, body.plantshare .modal-container .image-modal a.button:active, body.plantshare#ask #main .submit:active, body.plantshare#plantshare #ask .submit:active, body.plantshare#profile div.section-container .image-modal a.button:active, body.plantshare.checklists .image-modal a.button:active, #dkey #main .offer-help-aside a.button:active, #dkey #main ul.couplets a.button:active, #dkey #main a.show-all-button:active { background-color: #dc9402; background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dc9402), color-stop(60%, #f0b448), color-stop(100%, #dc9402)); background: -webkit-linear-gradient(top, #dc9402 0%, #f0b448 60%, #dc9402 100%); background: -moz-linear-gradient(top, #dc9402 0%, #f0b448 60%, #dc9402 100%); background: -o-linear-gradient(top, #dc9402 0%, #f0b448 60%, #dc9402 100%); background: linear-gradient(top, #dc9402 0%, #f0b448 60%, #dc9402 100%); }
-.orange-button:link, body.taxa .visit-dkey a:link, body.plantshare .ps-button:link, body.plantshare .modal-container .image-modal a.button:link, body.plantshare#ask #main .submit:link, body.plantshare#plantshare #ask .submit:link, body.plantshare#profile div.section-container .image-modal a.button:link, body.plantshare.checklists .image-modal a.button:link, #dkey #main .offer-help-aside a.button:link, #dkey #main ul.couplets a.button:link, #dkey #main a.show-all-button:link, .orange-button:hover, body.taxa .visit-dkey a:hover, body.plantshare .ps-button:hover, body.plantshare .modal-container .image-modal a.button:hover, body.plantshare#ask #main .submit:hover, body.plantshare#plantshare #ask .submit:hover, body.plantshare#profile div.section-container .image-modal a.button:hover, body.plantshare.checklists .image-modal a.button:hover, #dkey #main .offer-help-aside a.button:hover, #dkey #main ul.couplets a.button:hover, #dkey #main a.show-all-button:hover, .orange-button:visited, body.taxa .visit-dkey a:visited, body.plantshare .ps-button:visited, body.plantshare .modal-container .image-modal a.button:visited, body.plantshare#ask #main .submit:visited, body.plantshare#plantshare #ask .submit:visited, body.plantshare#profile div.section-container .image-modal a.button:visited, body.plantshare.checklists .image-modal a.button:visited, #dkey #main .offer-help-aside a.button:visited, #dkey #main ul.couplets a.button:visited, #dkey #main a.show-all-button:visited, .orange-button:active, body.taxa .visit-dkey a:active, body.plantshare .ps-button:active, body.plantshare .modal-container .image-modal a.button:active, body.plantshare#ask #main .submit:active, body.plantshare#plantshare #ask .submit:active, body.plantshare#profile div.section-container .image-modal a.button:active, body.plantshare.checklists .image-modal a.button:active, #dkey #main .offer-help-aside a.button:active, #dkey #main ul.couplets a.button:active, #dkey #main a.show-all-button:active { color: white; }
+.orange-button:hover, body.taxa .visit-dkey a:hover, body.plantshare .ps-button:hover, body.plantshare .modal-container .image-modal a.button:hover, body.plantshare#ask #main .submit:hover, body.plantshare#plantshare #ask .submit:hover, body.plantshare#profile div.section-container .image-modal a.button:hover, body.plantshare.checklists .image-modal a.button:hover, #dkey #main .offer-help-aside a.button:hover, #dkey #main ul.couplets a.button:hover, #dkey #main a.show-all-button:hover, .orange-button:visited, body.taxa .visit-dkey a:visited, body.plantshare .ps-button:visited, body.plantshare .modal-container .image-modal a.button:visited, body.plantshare#ask #main .submit:visited, body.plantshare#plantshare #ask .submit:visited, body.plantshare#profile div.section-container .image-modal a.button:visited, body.plantshare.checklists .image-modal a.button:visited, #dkey #main .offer-help-aside a.button:visited, #dkey #main ul.couplets a.button:visited, #dkey #main a.show-all-button:visited, .orange-button:active, body.taxa .visit-dkey a:active, body.plantshare .ps-button:active, body.plantshare .modal-container .image-modal a.button:active, body.plantshare#ask #main .submit:active, body.plantshare#plantshare #ask .submit:active, body.plantshare#profile div.section-container .image-modal a.button:active, body.plantshare.checklists .image-modal a.button:active, #dkey #main .offer-help-aside a.button:active, #dkey #main ul.couplets a.button:active, #dkey #main a.show-all-button:active { color: white; }
 .orange-button.caps, body.taxa .visit-dkey a.caps, body.plantshare .caps.ps-button, body.plantshare .modal-container .image-modal a.caps.button, body.plantshare#ask #main .caps.submit, body.plantshare#plantshare #ask .caps.submit, body.plantshare#profile div.section-container .image-modal a.caps.button, body.plantshare.checklists .image-modal a.caps.button, #dkey #main .offer-help-aside a.caps.button, #dkey #main ul.couplets a.caps.button, #dkey #main a.caps.show-all-button { text-transform: uppercase; }
 .orange-button.disabled, body.taxa .visit-dkey a.disabled, body.plantshare .disabled.ps-button, body.plantshare .modal-container .image-modal a.disabled.button, body.plantshare#ask #main .disabled.submit, body.plantshare#plantshare #ask .disabled.submit, body.plantshare#profile div.section-container .image-modal a.disabled.button, body.plantshare.checklists .image-modal a.disabled.button, #dkey #main .offer-help-aside a.disabled.button, #dkey #main ul.couplets a.disabled.button, #dkey #main a.disabled.show-all-button { background-color: #ecda92; /* for IE without gradient support */ border-color: #ecda92 !important; background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ecda92), color-stop(32%, #f1e3a6), color-stop(50%, #f1e3a6), color-stop(100%, #ecdb93)); background: -webkit-linear-gradient(top, #ecda92 0%, #f1e3a6 32%, #f1e3a6 50%, #ecdb93 100%); background: -moz-linear-gradient(top, #ecda92 0%, #f1e3a6 32%, #f1e3a6 50%, #ecdb93 100%); background: -o-linear-gradient(top, #ecda92 0%, #f1e3a6 32%, #f1e3a6 50%, #ecdb93 100%); background: linear-gradient(top, #ecda92 0%, #f1e3a6 32%, #f1e3a6 50%, #ecdb93 100%); }
+.orange-button.large, body.taxa .visit-dkey a.large, body.plantshare .large.ps-button, body.plantshare .modal-container .image-modal a.large.button, body.plantshare#ask #main .large.submit, body.plantshare#plantshare #ask .large.submit, body.plantshare#profile div.section-container .image-modal a.large.button, body.plantshare.checklists .image-modal a.large.button, #dkey #main .offer-help-aside a.large.button, #dkey #main ul.couplets a.large.button, #dkey #main a.large.show-all-button { font-size: 16px; letter-spacing: 1.5px; min-width: 150px; padding: 9px 30px; -webkit-border-radius: 20px; -moz-border-radius: 20px; -ms-border-radius: 20px; -o-border-radius: 20px; border-radius: 20px; }
 
 .hidden { display: none !important; }
 
@@ -470,20 +471,6 @@ table.list th, table.list td { padding: 4px; }
 table.list th, table.list tr.filters { background: #b4d57f; font-weight: normal; }
 table.list th td:first-child { font-family: "Trebuchet MS", Helvetica, Arial, "Lucida Sans Unicode", sans-serif; font-size: 13px; }
 
-/* "Advanced ID Tools" placeholder page (delete after tools release) */
-#advanced-id #main .dk-landing-section { float: left; font-family: Verdana, Geneva, "Lucida Sans Unicode", sans-serif; height: 410px; padding-left: 20px; position: relative; width: 328px; }
-#advanced-id #main .dk-landing-section:first-of-type { border-right: 1px solid #b4d57f; padding-left: 0; padding-right: 10px; }
-#advanced-id #main .dk-landing-section h2 { font-size: 18px; line-height: 20px; }
-#advanced-id #main .dk-landing-section section { margin: 10px 0 0; }
-#advanced-id #main .dk-landing-section section p { margin: 10px 0; }
-#advanced-id #main .dk-landing-section section ul { line-height: 16px; list-style-type: disc; margin: 10px 0; padding: 0 0 0 15px; }
-#advanced-id #main .dk-landing-section section ul li { margin: 10px 0; }
-#advanced-id #main .dk-landing-section > a { bottom: 10px; display: block; height: 41px; margin: 0 0 0 43px; position: absolute; text-indent: -9999px; width: 244px; }
-#advanced-id #main .dk-landing-section > a:hover { background-position: 0 -41px; }
-#advanced-id #main .dk-landing-section > a:active { background-position: 0 -82px; }
-#advanced-id #main a.go-fullkey-btn { background: url(/static/images/layout/go-fullkey-btn.png) 0 0 no-repeat transparent; }
-#advanced-id #main a.go-dichkey-btn { background: url(/static/images/layout/go-dichkey-btn.png) 0 0 no-repeat transparent; }
-
 /* For IE 6-9 browser compatibility prompts */
 #ie-note { background: #fff; border-bottom: 4px solid #508e31; color: #000; font-family: Arial, sans-serif; font-size: 13px; padding: 11px 0; text-align: center; }
 #ie-note p { margin: 0; position: relative; z-index: 2; }
@@ -512,9 +499,7 @@ table.list th td:first-child { font-family: "Trebuchet MS", Helvetica, Arial, "L
 #home #banner img:first-child { display: block; }
 #home #banner h2 { color: #519136; font-size: 38px; line-height: normal; margin: 0 0 15px 0; }
 #home #banner p { margin: 12px 0 0 0; text-align: left; text-shadow: 0px 1px 1px #fff; }
-#home #banner #cta { height: 41px; margin: 21px 2px 0; background: url(/static/images/layout/get-started-btn-orange.png) 0 0 no-repeat transparent; display: block; text-indent: -9000px; }
-#home #banner #cta:hover { background-position: 0 -41px; }
-#home #banner #cta:active { background-position: 0 -82px; }
+#home #banner #cta { margin: 21px 2px 0; width: 184px; }
 #home #overlay { background: rgba(255, 255, 255, 0.8); height: 318px; padding: 15px 30px 0; position: absolute; left: 646px; text-align: center; top: 6px; width: 248px; z-index: 50; }
 #home .three-col { background: url(/static/images/layout/dot.png) right top repeat-y; float: left; height: 240px; margin: 354px 23px 5px 0; padding: 8px 23px 0 0; width: 289px; }
 #home .three-col.last { background: 0; margin-right: 0; padding: 8px 0 0 0; }
@@ -562,9 +547,7 @@ table.list th td:first-child { font-family: "Trebuchet MS", Helvetica, Arial, "L
   #home #banner #overlay h2 { font-size: 28px; margin: 6px 0 0; }
   #home #banner #overlay p { padding: 0 8px; }
   #home #banner #overlay img { width: 53%; }
-  #home #banner #cta { background-position: 50% 0; margin: 6px; }
-  #home #banner #cta:hover { background-position: 50% -41px; }
-  #home #banner #cta:active { background-position: 50% -82px; }
+  #home #banner #cta { margin: 6px; }
   #home .three-col { background: none; float: none; height: inherit; margin: 14px 0; padding: 0; width: auto; }
   #home .three-col h3, #home .three-col h4, #home .three-col p { margin-left: 8px; margin-right: 8px; }
   #home .three-col h3 { font-size: 18px; }
@@ -579,10 +562,10 @@ table.list th td:first-child { font-family: "Trebuchet MS", Helvetica, Arial, "L
   #home #potd .details h3 { line-height: 120%; }
   #home #potd .details h4 { line-height: 140%; }
   #home #potd .details p { height: inherit; overflow: inherit; }
-  #home #potd .details a { margin-top: 4px; position: inherit; top: 0; }
+  #home #potd .details a { margin-top: 6px; position: inherit; top: 0; }
   #home .donate, #home .intro { margin: 0; }
   #home .donate p, #home .intro p { margin: 8px; padding: 0; }
-  #home .donate a { float: none; margin: 6px 0; position: static; } }
+  #home .donate a { float: none; margin: 6px 20px 0 0; position: static; } }
 /* End media queries styles for the Home page */
 /* Styles for maps */
 /* Location and sightings maps */
@@ -1580,9 +1563,7 @@ body.search-results .search-navigation li { display: inline; margin: 0 2px; }
 #getting-started a.screenshot:hover { text-decoration: none; }
 #getting-started a.screenshot img { margin: 10px 0; vertical-align: middle; }
 #getting-started a.screenshot img.screenshot-thumb { border: 5px solid #fff; display: block; margin: 0; -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3); -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3); box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3); }
-#getting-started a.onward-btn { cursor: pointer; display: block; float: right; width: 280px; height: 32px; margin: 10px 0; background: url(/static/images/layout/onward-btn-orange.png) 0 0 no-repeat transparent; text-indent: -9000px; }
-#getting-started a.onward-btn:hover { background-position: 0 -32px; }
-#getting-started a.onward-btn:active { background-position: 0 -64px; }
+#getting-started a.onward-btn { float: right; width: 240px; margin: 10px 0; }
 #getting-started .video-topic { height: 147px; margin-bottom: 4px; width: 196px; }
 #getting-started .video-topic img { height: 147px; width: 196px; }
 #getting-started .video-topic a { cursor: pointer; }
@@ -1629,6 +1610,16 @@ body.search-results .search-navigation li { display: inline; margin: 0 2px; }
 #glossary #terms dt a { border-bottom: 0; float: left; margin-left: -34px; }
 #glossary #terms dd { margin-left: 224px; padding: 13px; }
 #glossary #terms img { padding-left: 4px; padding-top: 1px; }
+
+/* "Advanced ID Tools" page */
+#advanced-id #main .dk-landing-section { float: left; font-family: Verdana, Geneva, "Lucida Sans Unicode", sans-serif; height: 410px; padding-left: 20px; position: relative; width: 328px; }
+#advanced-id #main .dk-landing-section:first-of-type { border-right: 1px solid #b4d57f; padding-left: 0; padding-right: 10px; }
+#advanced-id #main .dk-landing-section h2 { font-size: 18px; line-height: 20px; }
+#advanced-id #main .dk-landing-section section { margin: 10px 0 0; }
+#advanced-id #main .dk-landing-section section p { margin: 10px 0; }
+#advanced-id #main .dk-landing-section section ul { line-height: 16px; list-style-type: disc; margin: 10px 0; padding: 0 0 0 15px; }
+#advanced-id #main .dk-landing-section section ul li { margin: 10px 0; }
+#advanced-id #main .dk-landing-section > a { bottom: 10px; margin: 0 0 0 20px; position: absolute; width: 224px; }
 
 /* Video Help Topics */
 #video .video-topic { float: left; height: 176px; margin: 10px 16px 10px 0; position: relative; width: 220px; }
