--- a/gobotany/site/templates/montshire/_home_body_content.html
+++ b/gobotany/site/templates/montshire/_home_body_content.html
@@ -11,7 +11,8 @@
         New England plants! Observe closely, collect a sample or
         take a photo, answer some questions, and narrow down to
         the correct identification.</p>
-        <a href="{% url 'level1' 'simple' %}" id="cta">Get Started</a>
+        <a href="{% url 'level1' 'simple' %}" id="cta"
+            class="orange-button caps large">Get Started</a>
     </div>
 {% endblock %}
 
