Replace image buttons in the Simple and Full keys. (#327)

--- a/gobotany/plantpreview/templates/plantpreview/_popup.html
+++ b/gobotany/plantpreview/templates/plantpreview/_popup.html
@@ -42,7 +42,8 @@
               </dl>
               {{/each}}
             </div>
-	    <a class="go-to-species-page" href="{{plant_url}}"></a>
+            <a class="go-to-species-page orange-button caps"
+                href="{{plant_url}}">Go To Species Page</a>
 	  </div>
 	  <div class="clearit"></div>
 	</div>
