--- a/gobotany/simplekey/templates/gobotany/_results_main_content.html
+++ b/gobotany/simplekey/templates/gobotany/_results_main_content.html
@@ -31,7 +31,7 @@
 
         <div class="section more">
             <p class="get-more">
-                <a class="get-choices">Get More Questions</a>
+                <a class="get-choices orange-button caps">Get More Questions</a>
                 <span>Add a few more questions for narrowing your
                     matching species.</span></p>
         </div>
@@ -60,13 +60,13 @@
 
         <div class="section clear">
             <h5 class="left help">Start Over:</h5>
-            <a class="clear-all-btn left">Clear All</a>
+            <a class="clear-all-btn left orange-btn caps">Clear All</a>
         </div>
 
         <div class="section help">
             <h5 class="left help last">Need Help?</h5>
             <a href="{% url 'site-getting-started' %}"
-                class="get-help-btn left">Get Help</a>
+                class="get-help-btn left orange-btn caps">Get Help</a>
         </div>
     </div>
 
@@ -83,7 +83,7 @@
                 <div class="hint"></div>
                 <div class="values"></div>
                 <div class="actions">
-                  <a class="apply-btn">Apply</a>
+                  <a class="apply-btn orange-button caps large">Apply Selection</a>
                 </div>
             </div>
             <div class="terms none closed">
