--- a/gobotany/simplekey/templates/gobotany/_results_modal_dialogs.html
+++ b/gobotany/simplekey/templates/gobotany/_results_modal_dialogs.html
@@ -9,7 +9,7 @@
 				<ul class="char-groups">
                 </ul>
                 <!-- The empty onclick makes $.live() work in Mobile Safari -->
-                <a class="get-choices" onclick="">Get More Questions</a>
+                <a class="get-choices orange-button caps" onclick="">Get More Questions</a>
 				<div class="clearit"></div>
 			</div>
 		</div>
