Fix buttons on family and genus pages. (#327)

--- a/gobotany/taxa/templates/gobotany/_family_main_content.html
+++ b/gobotany/taxa/templates/gobotany/_family_main_content.html
@@ -38,6 +38,6 @@
 
     <p class="visit-dkey">
       Visit this family in the
-      <a href="{% url 'dkey_page' family.name.lower %}"
-         >Dichotomous Key</a>
+      <a class="orange-button caps"
+          href="{% url 'dkey_page' family.name.lower %}">Dichotomous Key</a>
     </p>
