--- a/gobotany/taxa/templates/gobotany/_genus_main_content.html
+++ b/gobotany/taxa/templates/gobotany/_genus_main_content.html
@@ -43,6 +43,6 @@
 
     <p class="visit-dkey">
       Visit this genus in the
-      <a href="{% url 'dkey_page' genus.name.lower %}"
-         >Dichotomous Key</a>
+      <a class="orange-button caps"
+          href="{% url 'dkey_page' genus.name.lower %}">Dichotomous Key</a>
     </p>
