Replace some image buttons for PlantShare. (#327)

--- a/gobotany/plantshare/templates/registration/registration_form.html
+++ b/gobotany/plantshare/templates/registration/registration_form.html
@@ -21,7 +21,7 @@ with a link to activate your account.</p>
 <form method="post" action=".">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" class="button" value="Sign Me Up"
+    <input type="submit" class="button orange-button caps large" value="Sign Me Up"
         id="sign_up_button">
 </form>
 
