--- a/gobotany/plantshare/templates/_login_form.html
+++ b/gobotany/plantshare/templates/_login_form.html
@@ -14,7 +14,8 @@
             tabindex="2">
         <a href="{% url 'ps-forgot-password' %}"
                 tabindex="4">Forgot password</a>
-        <input type="submit" class="button" value="Login" tabindex="3">
+        <input type="submit" class="button orange-button caps"
+            value="Log In" tabindex="3">
         <input type="hidden" name="next"
         value="{% if next %}{{ next }}{% else %}{% url 'ps-main' %}{% endif %}">
     </form>
