--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1085,15 +1085,11 @@ body.plantshare .box table th { font-weight: normal; text-align: left; width: 33
 body.plantshare form.login { padding: 0 16px 16px; max-width: 250px; min-width: 194px; }
 body.plantshare form.login label { font-size: 10px; }
 body.plantshare form.login input { border-color: #317b0c; max-width: 246px; }
-body.plantshare form.login input.button { background: transparent url(/static/images/layout/plantshare-btns.png) no-repeat -169px -231px; border: 0; height: 32px; width: 99px; display: block; text-indent: -9000px; }
-body.plantshare form.login input.button:hover { background-position: -169px -265px; }
-body.plantshare form.login input.button:active { background-position: -169px -299px; }
+body.plantshare form.login input.button { margin-top: 2px; width: 99px; }
 body.plantshare form.login a { float: right; font-family: "Trebuchet MS", Helvetica, Arial, "Lucida Sans Unicode", sans-serif; font-size: 11px; margin-top: 9px; padding-right: 1px; }
 body.plantshare .sign-up-call { clear: left; width: 475px; }
 body.plantshare .sign-up-call ul { line-height: 18px; list-style-position: inside; margin: 10px 0 0 24px; }
-body.plantshare .sign-up-call a { background: transparent url(/static/images/layout/plantshare-btns.png) no-repeat 0 -3px; height: 41px; margin: 12px auto; width: 244px; display: block; text-indent: -9000px; }
-body.plantshare .sign-up-call a:hover { background-position: 0 -88px; }
-body.plantshare .sign-up-call a:active { background-position: 0 -46px; }
+body.plantshare .sign-up-call a { margin: 12px auto; width: 204px; }
 body.plantshare .notification { width: 475px; }
 body.plantshare .notification ul { line-height: 18px; list-style-position: inside; margin: 10px 0 0 24px; }
 body.plantshare .ps-button { display: inline-block; color: white; margin: 10px 0; text-transform: uppercase; }
@@ -1156,9 +1152,7 @@ body.plantshare#find-people-profile .avatar { background: #e1f0d1; float: left; 
 body.plantshare#find-people-profile .map { float: right; height: 113px; width: 169px; }
 body.plantshare#find-people-profile .not-found { padding: 70px 0; text-align: center; }
 body.plantshare#sign-up #main form input { width: 350px; }
-body.plantshare#sign-up #main form input.button { background: transparent url(../images/layout/plantshare-btns.png) no-repeat -1px -359px; border: 0; height: 41px; margin-top: 12px; width: 244px; display: block; text-indent: -9000px; }
-body.plantshare#sign-up #main form input.button:hover { background-position: -1px -402px; }
-body.plantshare#sign-up #main form input.button:active { background-position: -1px -444px; }
+body.plantshare#sign-up #main form input.button { margin-top: 12px; width: 204px; }
 body.plantshare#log-in h1 + p { font-family: "Trebuchet MS", Helvetica, Arial, "Lucida Sans Unicode", sans-serif; font-size: 14px; margin: 0; padding: 16px 0; }
 body.plantshare#log-in ul.errorlist { padding: 16px 0; }
 body.plantshare#log-in form.login { padding-left: 0; }
