Replace more PlantShare image buttons. (#327)

--- a/gobotany/plantshare/templates/_ask_botanist_section.html
+++ b/gobotany/plantshare/templates/_ask_botanist_section.html
@@ -32,7 +32,7 @@ questions, and all visitors can see the answers.
         </p>
     </div>
 
-    <button class="submit">Submit</button>
+    <button id="ask-button" class="submit disabled" disabled>Submit</button>
 </form>
 {% endif %}
 
