--- a/gobotany/plantshare/templates/_delete_checklist.html
+++ b/gobotany/plantshare/templates/_delete_checklist.html
@@ -27,7 +27,7 @@
         </table>
 
         <p class="actions">
-            <a class="cancel-btn">No, Cancel</a>
+            <a class="cancel-btn orange-button caps">No, Cancel</a>
             <a class="delete" href="#">Yes, Delete</a>
         </p>
     </div>
