--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -70,9 +70,9 @@
         </div>
 
         {% if edit %}
-            <input type="submit" class="save-btn" value="Save"
-                alt="Save Changes">
+            <input type="submit" class="save-btn orange-button caps"
+                value="Save" alt="Save Changes">
         {% else %}
-            <input type="submit" class="post-sighting-btn inactive"
-            disabled alt="Post a Sighting">
+            <input type="submit" class="post-sighting-btn orange-button
+            caps disabled" disabled alt="Post a Sighting">
         {% endif %}
