--- a/gobotany/plantshare/templates/new_checklist.html
+++ b/gobotany/plantshare/templates/new_checklist.html
@@ -117,7 +117,8 @@
             </tbody>
         </table><!-- /#add-sightings-table -->
         <div class="form-actions">
-            <input type="submit" class="ps-button" id="save-btn" value="Save" />
+            <input type="submit" class="ps-button orange-button caps"
+            id="save-btn" value="Save">
             <a href="{% url 'ps-checklists' %}" class="cancel-link">Cancel</a>
         </div><!-- /.form-actions -->
     </form><!-- /#checklist-fillout -->
