--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -97,7 +97,8 @@
                 <li>Ask one of our expert botanists questions</li>
                 <li>Share your thoughts and musings with others</li>
             </li>
-            <a href="{% url 'registration_register' %}">Get Started</a>
+            <a class="orange-button caps large"
+                href="{% url 'registration_register' %}">Get Started</a>
         </div>
     {% endif %}
 {% endif %}
