--- a/gobotany/plantshare/templates/your_profile.html
+++ b/gobotany/plantshare/templates/your_profile.html
@@ -49,7 +49,8 @@
                                 </div>
                                 <div class="field-controls">
                                     <input type="button" 
-                                    class="field-save save-btn" value="Save">
+                                    class="field-save save-btn
+                                    orange-button caps" value="Save">
                                     <a href="#" class="field-reset">Cancel</a>
                                 </div>
                             </div>
@@ -68,7 +69,8 @@
                                 </div>
                                 <div class="field-controls">
                                     <input type="button"
-                                    class="field-save save-btn" value="Save">
+                                    class="field-save save-btn
+                                    orange-button caps" value="Save">
                                     <a href="#" class="field-reset">Cancel</a>
                                 </div>
                             </div>
@@ -87,7 +89,8 @@
                                 </div>
                                 <div class="field-controls">
                                     <input type="button"
-                                    class="field-save save-btn" value="Save">
+                                    class="field-save save-btn
+                                    orange-button caps" value="Save">
                                     <a href="#" class="field-reset">Cancel</a>
                                 </div>
                             </div>
@@ -134,7 +137,8 @@
                                 </div>
                                 <div class="field-controls">
                                     <input type="button"
-                                    class="field-save save-btn" value="Save">
+                                    class="field-save save-btn
+                                    orange-button caps" value="Save">
                                     <a href="#" class="field-reset">Cancel</a>
                                 </div>
                             </div>
@@ -153,7 +157,8 @@
                                 </div>
                                 <div class="field-controls">
                                     <input type="button"
-                                    class="field-save save-btn" value="Save">
+                                    class="field-save save-btn
+                                    orange-button caps" value="Save">
                                     <a href="#" class="field-reset">Cancel</a>
                                 </div>
                             </div>
