Replace the Terms of Agreement image button. (#327)

--- a/gobotany/plantshare/templates/terms_of_agreement.html
+++ b/gobotany/plantshare/templates/terms_of_agreement.html
@@ -57,7 +57,8 @@
             </label>
         </fieldset>
         </div>
-        <input type="submit" class="agree-btn inactive" value="I Agree">
+        <input type="submit" class="agree-btn orange-button caps
+        disabled" disabled value="I Agree">
         <a href="{% url 'django.contrib.auth.views.logout' %}">Cancel</a>
     </form>
 {% endblock %}
