--- a/gobotany/static/sass/_common.scss
+++ b/gobotany/static/sass/_common.scss
@@ -161,6 +161,7 @@ $disabled_orange_gradient: linear-gradient(
         background-color: mix($body_bg, $orange2, 50%); /* for IE without
                                                            gradient support */
         border-color: mix($body_bg, $orange2, 50%) !important;
+        cursor: default;
         @include background($disabled_orange_gradient);
     }
     &.large {
