--- a/gobotany/static/sass/_common.scss
+++ b/gobotany/static/sass/_common.scss
@@ -3,6 +3,7 @@
 @import "compass/css3/border-radius";
 @import "compass/css3/box-shadow";
 @import "compass/css3/images";   /* for gradient, etc. */
+@import "compass/css3/user-interface";
 
 /* Web fonts: style-linked groups */
 
